--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.10.1",
     "recoil": "^0.7.7",
+    "safe-json-stringify": "^1.2.0",
     "typescript": "5.1.3"
   }
 }
