--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.4.6",
     "firebase": "^9.22.2",
     "framer-motion": "^10.12.16",
+    "moment": "^2.29.4",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
