--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "recoil": "^0.7.7",
     "safe-json-stringify": "^1.2.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/safe-json-stringify": "^1.1.2"
   }
 }
