--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "firebase": "^9.22.2",
+    "firebase-functions": "^4.4.1",
     "framer-motion": "^10.12.16",
     "moment": "^2.29.4",
     "next": "13.4.6",
