--- a/functions/package.json
+++ b/functions/package.json
@@ -14,12 +14,12 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-admin": "^13.6.0",
+    "firebase-functions": "^7.0.4"
   },
   "devDependencies": {
-    "typescript": "^4.9.0",
-    "firebase-functions-test": "^3.1.0"
+    "firebase-functions-test": "^3.4.1",
+    "typescript": "^5.9.3"
   },
   "private": true
 }
