--- a/package.json
+++ b/package.json
@@ -14,26 +14,26 @@
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
-    "firebase": "^9.22.2",
-    "firebase-functions": "^4.4.1",
+    "@types/node": "^25.0.10",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^15.5.10",
+    "firebase": "^12.8.0",
+    "firebase-functions": "^7.0.4",
     "framer-motion": "^10.12.16",
     "moment": "^2.29.4",
-    "next": ">=14.1.1",
+    "next": "^15.5.10",
     "postcss": "^8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.10.1",
     "recoil": "^0.7.7",
     "safe-json-stringify": "^1.2.0",
-    "typescript": "5.1.3"
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@types/safe-json-stringify": "^1.1.2"
+    "@types/safe-json-stringify": "^1.1.5"
   }
 }
